<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Look at my GUI</string>
    <string name="ButtonText">Login</string>
    <string name="CheckText">Check this out!</string>
    <string name="SwitchText">Switch On/Off</string>
    <string name="edit_message">Type Here</string>
    <string name="toast_message">Here is more information</string>
    <string name="undo">Undo</string>
    <string name="check_true">The checkbox is on.</string>
    <string name="check_false">The checkbox is off.</string>
    <string name="sw_true">The switch is on.</string>
    <string name="sw_false">The switch is off.</string>
    <string name="email">Enter your email address:</string>
    <string name="email_message">Type email here</string>
    <string name="pword">Type your password:</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="name_message">Enter your name</string>
    <string name="email2">Your email:</string>
    <string name="email_message2">Enter your email</string>
    <string name="pic">Your picture:</string>
    <string name="click_pic">Click the button above to take a picture.</string>
    <string name="chatButton">Go to chat.</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="deleteEntry">Do you want to delete this?</string>
    <string name="row_select_msg">The selected row is: </string>
    <string name="databse_id_msg">The database ID is: </string>
    <string name="weatherButton">Weather Forecast</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>
    <string name="tbButton">Go to Toolbar page</string>
    <string name="title_activity_weather_forecast">activity_weather_forecast</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="item">Overflow Item</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open" tools:keep="@string/navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:keep="@string/navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" tools:keep="@string/nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" tools:keep="@string/nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc" tools:keep="@string/nav_header_desc">Navigation header</string>
    <string name="action_settings" tools:keep="@string/action_settings">Settings</string>

    <string name="menu_home" tools:keep="@string/menu_home">Home</string>
    <string name="menu_gallery" tools:keep="@string/menu_gallery">Gallery</string>
    <string name="menu_slideshow" tools:keep="@string/menu_slideshow">Slideshow</string>

    <string name="home_second" tools:keep="@string/home_second">Home Second</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
