<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp" >

    <TextView
        android:id="@+id/textv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textv"
        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/checkb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckText"
        android:layout_toRightOf="@+id/button"
        android:layout_below="@+id/textv"/>

    <ImageButton
        android:id="@+id/ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/swtch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwitchText"
        android:layout_toRightOf="@+id/ibutton"
        android:layout_below="@+id/checkb" />

    <EditText
        android:id="@+id/theEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ibutton"
        android:hint="@string/edit_message"
        android:inputType="textPersonName|textCapWords" />

</RelativeLayout>