<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/chatNav"
        android:title="@string/chatButton"
        android:orderInCategory="100"
        app:showAsAction="always"/>  <!-- This uses showAsAction=always, so look at icon= parameter -->

    <item android:id="@+id/weatherNav"
        android:orderInCategory="100"
        app:showAsAction="always|collapseActionView"
        android:title="@string/weatherButton"/>    <!-- This uses showAsAction=always, so look at icon= parameter -->

    <item android:id="@+id/loginNav"
        android:orderInCategory="100"
        app:showAsAction="always|collapseActionView"
        android:title="@string/ButtonText"/> <!-- This uses showAsAction=never, so look at title= parameter -->

</menu>