<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp" >>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_weight="1"
        android:layout_columnSpan="2"
        android:gravity="fill"
        android:text="@string/hello_message"
        android:textSize="28dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/checkb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/CheckText" />

    <ImageButton
        android:id="@+id/ibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_weight="1"
        android:gravity="fill"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/swtch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/SwitchText" />

    <EditText
        android:id="@+id/theEdit2"
        android:hint="@string/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_weight="1"
        android:gravity="fill"
        android:inputType="textPersonName|textCapWords"
        android:textSize="30dp" />

</GridLayout>